tests/fixtures/invalid/struct_pointer_field_const_discard.c
struct Holder {
    const int *view;
    int *slot;
};

int main(void) {
    const int value = 5;
    struct Holder holder = {&value, 0};

    holder.slot = holder.view;
    return 0;
}
